# internal/api/types.go
@@ -1,6 +1,8 @@
 package api
 
-import "time"
+import (
+	"time"
+)
 
 type MessageResponse struct {
 	ID                int32      `json:"id"`
@@ -13,4 +15,36 @@ type MessageResponse struct {
 	ResponseMessageID *string    `json:"response_message_id,omitempty"`
 	FailReason        *string    `json:"fail_reason,omitempty"`
 	RetryCount        int32      `json:"retry_count"`
+}
+
+// ErrorResponse swagger:model
+type ErrorResponse struct {
+	Status  string `json:"status" example:"error"`
+	Message string `json:"message" example:"Error message"`
+}
+
+// SimpleResponse swagger:model
+type SimpleResponse struct {
+	Status    string `json:"status" example:"ok"`
+	Message   string `json:"message" example:"Started listener"`
+	IsRunning bool   `json:"isRunning" example:"true"`
+}
+
+// HealthResponse swagger:model
+type HealthResponse struct {
+	Status            string `json:"status" example:"ok"`
+	HTTPServer        bool   `json:"httpServer" example:"true"`
+	ListenerIsRunning bool   `json:"listenerIsRunning" example:"true"`
+	Message           string `json:"message" example:"pong"`
+	ApiVersion        string `json:"apiVersion" example:"v1"`
+	BuildVersion      string `json:"buildVersion" example:"1.2.3"`
+}
+
+// PaginatedMessagesResponse swagger:model
+type PaginatedMessagesResponse struct {
+	Status        string            `json:"status" example:"ok"`
+	Items         []MessageResponse `json:"items"`
+	Limit         int               `json:"limit" example:"20"`
+	Offset        int               `json:"offset" example:"0"`
+	ReturnedCount int               `json:"returned_count" example:"20"`
 }
